doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-sourcepath
C:\Users\gabri\arch
-source
17
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\gabri\arch
-d
C:\Users\gabri\arch\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
arch
-windowtitle
arch
-author
-version
-nodeprecated
-package
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
C:\Users\gabri\arch/CriarUsuarioCasoUso.java
C:\Users\gabri\arch/CriarUsuarioAdministradorCasoUso.java
C:\Users\gabri\arch/UsuarioComum.java
C:\Users\gabri\arch/Usuario.java
C:\Users\gabri\arch/UsuarioAdministrador.java
C:\Users\gabri\arch/UsuarioGenerico.java
C:\Users\gabri\arch/Repositorio.java
C:\Users\gabri\arch/RepositorioMemoria.java
C:\Users\gabri\arch/UsuarioRepositorioMemoriaImpl.java
<---- end of javadoc command ---->
Loading source file C:\Users\gabri\arch\CriarUsuarioCasoUso.java...
C:\Users\gabri\arch\CriarUsuarioCasoUso.java:12: error: illegal character: '\u0013'
        validarNome(u.getNome());
                                 ^
Loading source file C:\Users\gabri\arch\CriarUsuarioAdministradorCasoUso.java...
Loading source file C:\Users\gabri\arch\UsuarioComum.java...
Loading source file C:\Users\gabri\arch\Usuario.java...
Loading source file C:\Users\gabri\arch\UsuarioAdministrador.java...
Loading source file C:\Users\gabri\arch\UsuarioGenerico.java...
Loading source file C:\Users\gabri\arch\Repositorio.java...
Loading source file C:\Users\gabri\arch\RepositorioMemoria.java...
Loading source file C:\Users\gabri\arch\UsuarioRepositorioMemoriaImpl.java...
1 error
